test/ui/name-resolution/exposure/indirect-cycle.stderr
error: exposure reach ‘topmost.component’ is circular
  ┌─ ${TEST_FOLDER}/name-resolution/exposure/indirect-cycle.lushui:9:10
  │
9 │ @(public component) data Center: extern.core.type.Type of
  │          ═════════

error: aborting due to previous error

